--- a/linuxassgmnt.ipynb
+++ b/linuxassgmnt.ipynb
@@ -171,7 +171,7 @@
         "top\n",
         "\n",
         "#terminate high cpu process forcefully\n",
-        "kill -9 <PID> \n"
+        "kill -9 PID \n"
       ],
       "metadata": {
         "id": "A2SsXDdvubRd"
